/*
 * Copyright 2016 Google, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// 1. syntax, package, option
syntax = "proto3";

package com.example.grpc;

option java_multiple_files = true;
import "request/helloRequest.proto";
import "response/helloResponse.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";

// 4. service, unary request/response
service GreetingService {
    rpc greeting(com.example.grpc.request.HelloRequest) returns (com.example.grpc.response.HelloResponse);
    rpc manyGreetingsOneReply(stream com.example.grpc.request.HelloRequest) returns (com.example.grpc.response.HelloResponse);
    rpc oneGreetingManyReplies(com.example.grpc.request.HelloRequest) returns (stream com.example.grpc.response.HelloResponse);
    rpc oneGreetingEmptyReply(com.example.grpc.request.HelloRequest) returns (google.protobuf.Empty);
    rpc greetingAnyRequest(google.protobuf.Any) returns ( com.example.grpc.response.HelloResponse) ;
    rpc greetingAnyResponse(com.example.grpc.request.HelloRequest) returns (google.protobuf.Any) ;
}

service AnotherGreetingService {
    rpc anotherGreeting(com.example.grpc.request.HelloRequest) returns (com.example.grpc.response.HelloResponse);
}